sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:3: error: not found: value getNombreValeur
	var gap=getNombreValeur/2
                ^